--- a/Artigo_RBFin.qmd
+++ b/Artigo_RBFin.qmd
@@ -20,6 +20,7 @@ library(pins)
 anos_download <- unique(format(seq(as.Date("2005-01-01"),as.Date("2020-12-31"),by = "month"),"%Y"))
 meses_download <- format(seq(as.Date("2021-01-01"),as.Date("2024-07-01"),by = "month"),"%Y%m")
 
+plan(multisession, workers = 6)
 
 future_map(anos_download, function(ano){
   url <- paste0("https://dados.cvm.gov.br/dados/FI/DOC/INF_DIARIO/DADOS/HIST/inf_diario_fi_",ano,".zip")
@@ -39,12 +40,13 @@ future_map(zipfiles,function(path){
   unzip(path,exdir = "dados")
 })
 
+plan(sequential)
 file.remove(zipfiles)
 
 
 informes_path <- list.files("dados",full.names = T,pattern = ".csv")
 
-
+plan(multisession, workers = 6)
 future_map(informes_path,function(informe){
   read_delim(informe, 
              delim = ";", 
@@ -56,6 +58,8 @@ future_map(informes_path,function(informe){
 
 
 bind_rows(informe_diario_fundos) -> informe_diario_fundos
+
+plan(sequential)
 
 board <- board_folder("board")
 pin_write(board,informe_diario_fundos,"informe_diario_fundos",type = "qs")
